Bug 165822 - Dolphin places sidebar does not honor single-click settings
Summary: Dolphin places sidebar does not honor single-click settings
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-06 00:17 UTC by Jonas Thorell
Modified: 2008-11-17 19:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonas Thorell 2008-07-06 00:17:14 UTC
Version:            (using KDE 4.0.83)
Installed from:    SuSE RPMs

I'm using Suse's Factory repo, and is now using KDE 4.0.85 and Dolphin 1.0.99.

The places sidebar has "decided" to stop honoring the single-click setting. In 4.0.84 it did. I can still use the sidebar though, I just need to double-click on the entries instead of single-clicking.
Comment 1 Peter Penz 2008-07-06 08:45:52 UTC
Thanks for the report, this has been fixed a few days ago. This regression has been introduced due to a change in kstyle which respects now the single/double click setting -> some applications and widgets had to be adjusted.
Comment 2 Jonas Thorell 2008-07-16 00:34:21 UTC
I'm not sure if I should reopen it, but the new behavior is present in 4.1 RC1 as well. At least for me it is...
Comment 3 Peter Penz 2008-07-16 07:52:08 UTC
Strange: I cannot reproduce this issue here. RC1 has been tagged on the 8th of July, so the fix should be part of it. I did not get a similar bug-report yet - are you sure that you've updated all packages for RC1? Usually for those kind of bugs I get around 20 bug-reports, as this would be a major issue... ;-)

Just to be sure:
- Do you use Oxygen as theme? The root cause for the double-click issue was a change in kstyle - maybe a specific theme does not honor this change...
- Do you have single-click enabled? I also checked it with the double-click setting and only one click is necessary in the places panel... However the info might be useful.

Thanks!
Comment 4 Jonas Thorell 2008-07-16 13:16:21 UTC
Yes, I'm quite sure all packages were updated. At least as far as the suse update manager is concerned. And single-click is certainly enabled - it works everywhere else.

Oh, but nevermind. I just found the culprit. It's QtCurve that doesn't play nicely with that change (yet I would assume).

It's not a big issue so I will "suffer" through it until QtCurve's been updated.
Comment 5 Peter Penz 2008-07-16 13:25:01 UTC
OK, thanks! Interesting that it is really a style issue - for me a change of the style should not lead to a change of the behavior.
Comment 6 Ben Aceler 2008-11-05 18:50:28 UTC
Well, Dolphin 1.1 (KDE 4.1.2, Kubuntu packages) - here we go again! :) Style: Cleanlooks, Oxygen works fine.
Comment 7 Ben Aceler 2008-11-05 18:52:21 UTC
Actually, this bug is for all styles except Oxygen.
Comment 8 Maciej Pilichowski 2008-11-16 10:42:17 UTC
The bug is still there. KDE4.1.3.

oxygen, double click -> places single click, OK
oxygen, single click -> places single click, OK
plastique, double click -> places single click, OK
plastique, single click -> places double click, BUG!

One note: quite contrary to the original report "The places sidebar has "decided" to stop honoring the single-click setting" -- it should really stop honoring single-click setting, because this setting is irrelevant for "places pane". Places pane is variant of toolbar, so it should be single-click only and always.

Anyway, please reopen this report, it is still valid.
Comment 9 Peter Penz 2008-11-16 19:34:26 UTC
I'll fix this before KDE 4.2.
Comment 10 Peter Penz 2008-11-17 19:33:13 UTC
SVN commit 885676 by ppenz:

Fixed issue that the clicking behavior of the places view depends on the used style. No matter which style is used or whether single-click/double-click is activated: a single click on a place should immediately open the place

BUG: 165822
CCMAIL: ervin@kde.org

 M  +0 -11     kfileplacesview.cpp  
 M  +0 -1      kfileplacesview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=885676