Fixed issue that the clicking behavior of the places view depends on the used style. No matter which style is used or whether single-click/double-click is activated: a single click on a place should immediately open the place

BUG: 165822
CCMAIL: ervin@kde.org

svn path=/trunk/KDE/kdelibs/; revision=885676